--- a/Project/composer.json
+++ b/Project/composer.json
@@ -13,6 +13,7 @@
         "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
+        "bennett-treptow/laravel-migration-generator": "^4.3",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
